tests/parsing/dimacs/tokens/p.expected
File "tests/parsing/dimacs/tokens/p.cnf", line 1, character 2-3:
1 | p p
      ^
Error while parsing a p-cnf header, read the keyword 'p',
      but expected the keyword "cnf".
